Add jenkinsfile, grunt and testing task

--- a/.jshintrc
+++ b/.jshintrc
@@ -1,10 +1,10 @@
 {
   "node": true,
-  "browser": true,
+  "browser": false,
   "esnext": true,
   "bitwise": true,
   "camelcase": true,
-  "curly": false,
+  "curly": true,
   "eqeqeq": true,
   "immed": true,
   "indent": 2,
@@ -12,7 +12,7 @@
   "newcap": true,
   "noarg": true,
   "undef": true,
-  "unused": "vars",
+  "unused": "true",
   "strict": true,
   "trailing": true,
   "smarttabs": true,
