--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "grafterizer-reborn",
+  "name": "grafterizer-dispatch-service",
   "version": "0.1.0",
   "description": "",
   "main": "server.js",
@@ -7,9 +7,9 @@
   "license": "ISC",
   "scripts": {
     "start": "node server.js",
-    "test": "jscs server.js && jshint server.js"
+    "test": "grunt test"
   },
-  "dependencies": {
+  "devDependencies": {
     "agentkeepalive": "^2.0.3",
     "body-parser": "^1.15.1",
     "client-sessions": "^0.7.0",
@@ -25,6 +25,17 @@
     "request": "^2.69.0",
     "serve-favicon": "^2.3.0",
     "simple-oauth2": "^0.7.0",
-    "temp": "^0.8.3"
+    "temp": "^0.8.3",
+    "grunt": "^0.4.5",
+    "grunt-concurrent": "^2.2.1",
+    "grunt-contrib-clean": "^1.0.0",
+    "grunt-contrib-nodeunit": "^1.0.0",
+    "grunt-contrib-jshint": "^1.0.0",
+    "grunt-jscs": "^2.7.0",
+    "grunt-mocha": "^1.0.2",
+    "grunt-newer": "^1.1.2",
+    "jshint-stylish": "^2.1.0",
+    "load-grunt-tasks": "^3.4.1",
+    "time-grunt": "^1.3.0"
   }
 }
